[package]
name = "wingif"
version = "0.1.0"
authors = ["wuyaoping <jamykp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
core-foundation = "0.9.1"
core-foundation-sys = "0.8.2"
core-graphics = "0.22.2"
getopts = "0.2.21"
gifski = "1.4.3"
imgref = "1.8.0"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
rayon = "1.5.0"
rgb = "0.8.27"
